samples/_failures_safe/1761167026_b1880d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_96e9d9b7.c: In function ‘tokenize’:
./samples/SAFE/__tmp_96e9d9b7.c:171:13: error: expected expression at end of input
  171 |             tokens[token_count++] =
      |             ^~~~~~
./samples/SAFE/__tmp_96e9d9b7.c:171:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_96e9d9b7.c:171:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_96e9d9b7.c:171:13: error: expected declaration or statement at end of input
